--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "enquire.js": "^2.1.6",
     "highlight.js": "^10.2.1",
     "js-cookie": "^2.2.1",
-    "k-form-design": "^3.7.75",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.11",
+    "vue-codemirror-lite": "^1.0.4",
+    "vue-quill-editor": "^3.0.6",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4",
     "vuedraggable": "^2.23.2",
@@ -49,7 +50,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "fast-deep-equal": "^3.1.3",
     "gh-pages": "^3.1.0",
-    "less-loader": "^6.1.1",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
