--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
+    "portal-vue": "^2.1.7",
+    "three": "^0.130.0",
+    "three-orbit-controls": "^82.1.0",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.11",
     "vue-codemirror-lite": "^1.0.4",
-    "vue-quill-editor": "^3.0.6",
     "vue-i18n": "^8.18.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.3.4",
+    "vue-virtual-scroll-list": "^2.3.2",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0"
   },
@@ -74,7 +78,8 @@
     },
     "rules": {
       "no-debugger": "off",
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
