--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@fullcalendar/core": "^5.9.0",
+    "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
+    "@fullcalendar/moment": "^5.9.0",
+    "@fullcalendar/resource-timeline": "^5.9.0",
+    "@fullcalendar/timegrid": "^5.9.0",
+    "@fullcalendar/vue": "^5.9.0",
     "animate.css": "^4.1.0",
     "ant-design-vue": "1.7.2",
     "axios": "^0.19.2",
@@ -79,7 +86,7 @@
     "rules": {
       "no-debugger": "off",
       "no-console": "off",
-      "no-unused-vars": "off"
+      "no-unused-vars": "warn"
     }
   },
   "browserslist": [
