--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue-i18n": "^8.18.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.3.4",
+    "vue-snow-ui": "0.1.4",
     "vue-virtual-scroll-list": "^2.3.2",
     "vuedraggable": "latest",
     "vuex": "^3.4.0"
