--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
+    "css-doodle": "^0.19.2",
     "date-fns": "^2.14.0",
     "enquire.js": "^2.1.6",
+    "faker": "^5.5.3",
     "highlight.js": "^10.2.1",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
