--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "faker": "^5.5.3",
     "highlight.js": "^10.2.1",
     "js-cookie": "^2.2.1",
+    "js-search": "^2.0.0",
+    "lunr": "^2.3.9",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
