--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fullcalendar/resource-timeline": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
     "@fullcalendar/vue": "^5.9.0",
+    "@handsontable/vue": "^9.0.2",
     "animate.css": "^4.1.0",
     "ant-design-vue": "1.7.2",
     "axios": "^0.19.2",
@@ -31,15 +32,18 @@
     "date-fns": "^2.14.0",
     "enquire.js": "^2.1.6",
     "faker": "^5.5.3",
+    "handsontable": "^9.0.2",
     "highlight.js": "^10.2.1",
     "js-cookie": "^2.2.1",
     "js-search": "^2.0.0",
+    "lunar-javascript": "^1.2.5",
     "lunr": "^2.3.9",
     "mockjs": "^1.1.0",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "ol": "^6.6.1",
     "portal-vue": "^2.1.7",
+    "solarlunar": "^2.0.7",
     "three": "^0.130.0",
     "three-orbit-controls": "^82.1.0",
     "viser-vue": "^2.4.8",
@@ -93,7 +97,8 @@
     "rules": {
       "no-debugger": "off",
       "no-console": "off",
-      "no-unused-vars": "warn"
+      "no-unused-vars": "warn",
+      "no-empty": "warn"
     }
   },
   "browserslist": [
