--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "style-resources-loader": "^1.3.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.2",
