--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "solarlunar": "^2.0.7",
     "three": "^0.130.0",
     "three-orbit-controls": "^82.1.0",
+    "tracking": "^1.1.3",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.11",
     "vue-codemirror-lite": "^1.0.4",
@@ -56,7 +57,8 @@
     "vue-snow-ui": "0.1.5",
     "vue-virtual-scroll-list": "^2.3.2",
     "vuedraggable": "latest",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webrtc-adapter": "^8.1.1"
   },
   "devDependencies": {
     "@ant-design/colors": "^4.0.1",
